--- a/index.html
+++ b/index.html
@@ -13,8 +13,37 @@
   </head>
   <body>
     <div class="container">
-
-      <h1> hello world</h1>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Saturday 07:27</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Clear"
+            />
+            25 °C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 2%</li>
+              <li>Humidity: 79%</li>
+              <li>Wind: 5 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/Cyntra-22/Venilla-Weather-App"
+          target="_blank"
+          >Open-source code,</a
+        >
+        by Myo Pa Pa Kyaw
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
