--- a/index.html
+++ b/index.html
@@ -13,26 +13,34 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Saturday 07:27</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="Clear"
-            />
-            25 °C | °F
-          </div>
-          <div class="col-md-6">
+      <div class="weather-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 2%</li>
-              <li>Humidity: 79%</li>
-              <li>Wind: 5 km/h</li>
+              <li>Saturday 07:27</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Clear"
+                />
+                <div>
+                  <strong>25</strong><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Precipitation: 2%</li>
+                <li>Humidity: 79%</li>
+                <li>Wind: 5 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
