Updated the time

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <div class="overview">
             <h1 id="city">New York</h1>
             <ul>
-              <li id="description">Saturday 07:27</li>
-              <li>Clear</li>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -38,8 +38,8 @@
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Humidity: <span id="humidity">79</span>%</li>
-                <li>Wind: <spand id="speed">5</spand> km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <spand id="speed"></spand> km/h</li>
               </ul>
             </div>
           </div>
