--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="col-md-6">
               <div class="d-flex weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Clear"
+                  src=""
+                  alt="" id="icon"
                 />
                 <div>
                   <strong id="temperature"></strong
