--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
                 <input
                   type="search"
                   placeholder="Type a city name..."
-                  class="form-control" id="city-input" autocomplete="off"
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
                 />
               </div>
               <div class="col-3">
-              <input type="submit" value="Search" class="btn btn-primary w-100" />
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
               </div>
             </div>
           </form>
@@ -43,7 +49,7 @@
                 <img src="" alt="" id="icon" />
                 <div>
                   <strong id="temperature"></strong
-                  ><span class="units">°C | <a href="#">°F</a></span>
+                  ><span class="units" ><a href="#" id="celcius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
                 </div>
               </div>
             </div>
